Improve the algorithm, add javadoc to InjectableInstance
- also fix HealthCheckDefaultScopeTest